[package]
name = "chronicle_rs"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Documenting and archiving Rust's history and community"

[dependencies]
rocket = "*"
serde = "*"
serde_derive = "*"
comrak = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json"]
